test/classes/figueroa/BogusDestructors5.chpl
class C {
  proc ~foo () {writeln("inside ~foo");}
}
